made Elle branch

--- a/championship/index.html
+++ b/championship/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <section id="championship">
-            <h2>2. Which team will win the 2025 NBA Championship?</h2>
+            <h2>2. Which team is most likely to win the 2025 NBA Championship?</h2>
         </section>
     </main>
 
