cleaned up code, added interactions - need to add text

--- a/championship/index.html
+++ b/championship/index.html
@@ -34,7 +34,7 @@
             
                 <!-- Bar chart section with filter -->
                 <div class="bar-chart-container">
-                    <select id="teamFilter"></select> <!-- Bar chart filter dropdown -->
+                    <!--<select id="teamFilter"></select> <!-- Bar chart filter dropdown -->
                     <div id="bar-chart"></div>
                 </div>
             </div>
@@ -46,7 +46,7 @@
     </footer>
 
     <script src="script.js"></script>
-    <script src="teamLossesAndWinsMonth.js"></script>
     <script src = "teamsTotalPointsMonth.js"></script>
+    <script src="teamLossesAndWinsMonth.js"></script>
 </body>
 </html>
