finished interactions, just need to add text explaining visualizations!

--- a/championship/index.html
+++ b/championship/index.html
@@ -28,13 +28,16 @@
             <div id="chart-wrapper" style="display: flex; justify-content: center; align-items: flex-start; gap: 40px;">
                 <!-- Pie chart section with filter -->
                 <div class="pie-chart-container">
+                    <label for="monthFilter" style="font-weight: bold; margin-right: 8px;">Select Month:</label>
                     <select id="monthFilter"></select> <!-- Pie chart filter dropdown -->
                     <div id="pie-chart"></div>
                 </div>
-            
+
+                <div id="teamStatsDisplay" style="margin-top: 10px; font-weight: bold;"></div>
+                
                 <!-- Bar chart section with filter -->
                 <div class="bar-chart-container">
-                    <!--<select id="teamFilter"></select> <!-- Bar chart filter dropdown -->
+                    <!--<select id="teamFilter"></select>  Bar chart filter dropdown -->
                     <div id="bar-chart"></div>
                 </div>
             </div>
