--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 
     <main>
         <section id="home">
-            <h2>Welcome</h2>
-            <p>Explore visualizations answering key questions about the 2024-2025 NBA season. Use the navigation above to select a topic.</p>
-            <p>Project by SVGeniuses: Mitchel Carson, Olivia Jones, Elle Sawyer, Tabatha Williams for CS3435.</p>
+            <h1 style = "text-align: center;"> "Inspiring and connecting people everywhere through the power of basketball"</h1>
+            <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYTNiYjg2YWJqZG1wNWVieTl5cWVqdWE2aHN2Zmw4M2xjbGV4NWFtcCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/jjumjlFxZBoM8B9Oo3/giphy.gif" alt="Basketball Court" style="width:100%; max-width:400px; display:block; margin: 20px auto;">
+            <p style="font-size: 1.6em; text-align: center;">Explore visualizations answering key questions about the 2024-2025 NBA season. Use the navigation above to select a topic.</p>
+            <p style="font-size: 1.3em; text-align: center;">Project by SVGeniuses: Mitchel Carson, Olivia Jones, Elle Sawyer, Tabatha Williams for CS3435.</p>
         </section>
     </main>
 
