--- a/championship/index.html
+++ b/championship/index.html
@@ -28,7 +28,8 @@
             <div id="chart-wrapper" style="display: flex; justify-content: center; align-items: flex-start; gap: 40px;">
                 <!-- Pie chart section with filter -->
                 <div class="pie-chart-container">
-                    <label for="monthFilter" style="font-weight: bold; margin-right: 8px;">Select Month:</label>
+                    <p id="chartTitle">Wins and Losses by Team></p>
+                    <label for="monthFilter" style=" margin-left: 10px;">Select Month:</label>
                     <select id="monthFilter"></select> <!-- Pie chart filter dropdown -->
                     <div id="pie-chart"></div>
                 </div>
