--- a/fouls/index.html
+++ b/fouls/index.html
@@ -6,6 +6,7 @@
     <title>NBA Fouls Impact - NBA Stats Viz</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
     <header>
