Changed Index file to have correct question.

--- a/fouls/index.html
+++ b/fouls/index.html
@@ -24,7 +24,7 @@
 
     <main>
         <section id="fouls">
-            <h2>3. How do personal fouls impact a team's overall wins/losses?</h2>
+            <h2>3. How do team fouls impact overall wins?</h2>
         </section>
     </main>
 
