Adjusted visaulization styling.

--- a/trades/index.html
+++ b/trades/index.html
@@ -37,16 +37,18 @@
               <option value="CLE-ATL">Cavaliers-Hawks (Hunter/LeVert)</option>
             </select>
 
-            <div class="chart-container">
-                <h3>Player Stats Comparison (Post-Trade)</h3>
-                <p>Comparing average Points Per Game (PPG) and Minutes Per Game (MPG) for key players on their new teams after the trade.</p>
-                <canvas id="player-stats-chart"></canvas>
-            </div>
+            <div class="charts-wrapper">
+                <div class="chart-container">
+                    <h3>Player Stats Comparison (Post-Trade)</h3>
+                    <p>Comparing average Points Per Game (PPG) and Minutes Per Game (MPG) for key players on their new teams after the trade.</p>
+                    <canvas id="player-stats-chart"></canvas>
+                </div>
 
-            <div class="chart-container">
-                <h3>Team Win Percentage Timeline (Post-Trade)</h3>
-                <p>Tracking the win percentage of involved teams starting from the trade date.</p>
-                <canvas id="team-win-percentage-chart"></canvas>
+                <div class="chart-container">
+                    <h3>Team Win Percentage Timeline (Post-Trade)</h3>
+                    <p>Tracking the win percentage of involved teams starting from the trade date.</p>
+                    <canvas id="team-win-percentage-chart"></canvas>
+                </div>
             </div>
         </section>
     </main>
